Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52712

ClearColor doesn't work when set from Scene3D

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.0 RC
    • 5.7.0 Alpha
    • Qt3D
    • None
    • Windows 7
    • 4ce52c0cdc479b5e75d22a7a3bfd968a928d10aa

    Description

      The clearColor doesn't work when setting from Scene3D. Reproducable in audio visualizer example(the backround is white, when it should be black) and controls(changing the clearColor in qml does not change it).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            seanharmer Sean Harmer
            anmaatta Antti Määttä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes