Fix ClearColor for Scene3D usage.

QtQuick renderer resets OpenGL state every frame. Thus we need
to explicitly set the clearColor, too, every frame.

Task-number: QTBUG-52712
Change-Id: I872e2e57db6d436d5754a6f5fa14588fbcc6f544
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>